# number_theory

./: .clang-tidy  CMakeLists.txt  LICENSE
.github/workflows/: build-and-test.yaml  checks.yaml  clang-format-lint.yaml  clang-format.yaml  clang-tidy.yaml  test.yaml
number_theory/: CMakeLists.txt  modular.h  modular_unittest.cpp  numeric.h  numeric_unittest.cpp  prime.h  prime_unittest.cpp  sieve.h  sieve_unittest.cpp  utility.h
